--- a/article.html
+++ b/article.html
@@ -13,15 +13,15 @@
   <br>
   <a href="reviews.html">Reviews</a> | <a href="news.html">News</a> | <a href="video.html">Video</a> | <a href="howto.html">How To</a>
   </br>
-    <h3>Apple's Newest Software Update</h2>
+    <h3>Apple's Newest Software Update</h3>
     
-	</p>The release of Apple’s latest mobile software system, iOS 8, was riddled with major bugs, and Apple customers actually seem to care. They are adopting the new software update more slowly than they did past releases.</p>
+	<p>The release of Apple’s latest mobile software system, iOS 8, was riddled with major bugs, and Apple customers actually seem to care. They are adopting the new software update more slowly than they did past releases.</p>
     <h3> iOS 7 Vs. iOS 8 </h3>
     <p>The company said on a webpage that as of Sunday 47 percent of Apple mobile devices are running iOS 8 after it was released about two and a half weeks ago. That is much lower adoption rate than that of the previous version, iOS 7, which was running on about 70 percent of device about two and a half weeks after its release, according to an estimate by Mixpanel. The blog MacRumors earlier spotted the statistic.</p>
     <h3>There are a couple of popular theories for why people might be picking up iOS 8 more slowly.</h3>
-    <ol><li>One, they could have heard about the serious bugs, like the one that temporarily caused some users’ phones to stop working.<li> Two, the software update requires a significant amount of storage on the device — about five gigabytes — when it is installed wirelessly over the Internet.<li> Three, it just doesn’t offer a big improvement over past phones.</ol>
+    <ol><li>One, they could have heard about the serious bugs, like the one that temporarily caused some users’ phones to stop working.<li> Two, the software update requires a significant amount of storage on the device — about five gigabytes — when it is installed wirelessly over the Internet.<li> Three, it just doesn’t offer a big improvement over past phones.</li> </ol>
     <h3>Why should anyone care?</h3>
-    <ol><li>For Apple, it is a big plus when a large amount of people grab the latest iOS: The newest system is made to work best on newer phones, and that encourages people with older devices to eventually buy new ones.</li><li> As for third-party software developers selling apps through Apple’s App Store, it is more efficient to focus on building apps for a single audience running the same software system.</li></ul>
+    <ol><li>For Apple, it is a big plus when a large amount of people grab the latest iOS: The newest system is made to work best on newer phones, and that encourages people with older devices to eventually buy new ones.</li><li> As for third-party software developers selling apps through Apple’s App Store, it is more efficient to focus on building apps for a single audience running the same software system.</li></ol>
 
     <blockquote cite="http://bits.blogs.nytimescom/2014/10/07/after-a-buggy-start-apples-ios-8-is-adopted-more-slowly-by-customers/?_php=true&_type=blogs&_r=0"><em>“If you’re a developer, you want the largest possible base of devices to be able to use your app, but if half the people with iPhones are on iOS 7 or earlier, the addressable market becomes a lot smaller,”</em> said Jan Dawson, an independent technology analyst for Jackdaw Research.
     <h3>iOS 8.1</h3>
@@ -29,6 +29,6 @@
     <h3>Compatible Devices</h3>
     <p>The new iPhone software runs on the following iPhone models: iPhone 6, iPhone 6S, iPhone 5S, and iPhone 5.</p>
   <br />
-<a href="index.html">Home</a> | Copyright &copy; 2014 CBS Interactive
+<a href="index.html">Home</a> | <h1>Copyright &copy; 2014 CBS Interactive</h1>
 </body>
 </html>
